[package]
name = "wasi-types"
version = "0.1.6"
authors = ["Oasis Labs <info@oasislabs.com>"]
edition = "2018"
description = "Rusty bindings for WASI libc types."
readme = "README.md"
repository = "https://github.com/oasislabs/wasi-types"
license = "Apache-2.0"

[dependencies]
bitflags = "1.2.1"
num = "0.4.0"
num-derive = "0.3.3"
num-traits = "0.2.14"
serde = { version = "1.0.115", features = ["derive"] }
err-derive = "0.2"
